refactor: upgrade versions

--- a/app/poll.html
+++ b/app/poll.html
@@ -9,9 +9,9 @@
 <body>
   <div class="poll">
     <div class="poll__wrapper">
-      <h1 class="poll__title">Who should be elected?</h1>
+      <h1 class="poll__title">Quem deve ser eliminado?</h1>
       <div class="poll__candidates"></div>
-      <button class="poll__vote-button">Vote now!</button>
+      <button class="poll__vote-button">Vote agora!</button>
     </div>
   </div>
   <script src="build/poll.min.js"></script>
